Cacti CHANGELOG

0.8.7a
-bug#0001046: Upgrade from 0.8.6j to 0.8.7 defaults to Authentication Method NONE

0.8.7
-bug#0000480: Fix error after altering graphs displayed per page
-bug#0000740: Add support for setting the PHP session name of Cacti
-bug#0000829: Add support for an specifying an uptime OID for SNMP queries
-bug#0000830: Add filtering graphs by Graph Template
-bug#0000833: Add favicon.ico support
-bug#0000850: Add Select All for graph list view
-bug#0000854: Move "Downed Host Detection" into the device edit screen
-bug#0000873: Fix issues with the poller hanging in certain situations
-bug#0000876: Add ability to search for host with a not UP status
-bug#0000898: Selecting a CUSTOM timespan and then CLEARing yields "LAST HALF HOUR" preset
-bug#0000899: Add local checking to the Paths tab on the Settings page
-bug#0000902: Fix issues with cmd.php and PHP 4.4.1 under windows
-bug#0000903: snmpgetnext function does not exist in PHP less than 5.0
-bug#0000904: Data Source creation fails without php-snmp
-bug#0000906: Every tenth host does not show on tree during console edit
-bug#0000907: Sorting of data sources when interface numbers are used without leading zeros are incorrectly sorted
-bug#0000908: Graphs created by SNMP data queries are losing their specific names if the template is modified
-bug#0000910: Cacti complains when trying to set the data source "maximum value" to any number with a decimal point
-bug#0000912: Nth Percentile thumbnail graphs fail with RRDtool 1.2.15, 1.2.18
-bug#0000913: Allow direct linking to specific graph pages
-bug#0000919: Fix problem with ping_tcp function
-bug#0000920: Improved handling of rrdtool --font parameter
-bug#0000921: Improvement to ping.pl script
-bug#0000925: Support for host_* variables in the legend
-bug#0000926: Stop removing useful characters when searching
-bug#0000927: Classic export does not recognize thumbnail columns properly
-bug#0000931: New rrdtool fails on empty comment